# CryptoRPG---Roll-Dicer

./: CMakeLists.txt  README.md  diceengine.cpp  diceengine.h  hostsetupwindow.cpp  hostsetupwindow.h  hostsetupwindow.ui  joinsetupwindow.cpp  joinsetupwindow.h  joinsetupwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  roomclient.cpp  roomclient.h  roomprotocol.h  roomserver.cpp  roomserver.h  solowindow.cpp  solowindow.h  solowindow.ui  startwindow.cpp  startwindow.h  startwindow.ui  style.qss  theme.h
